@@ -780,22 +780,6 @@ int member_exec( struct ast_channel* chan, void* data )
 		conf->membercount
 	) ;
 
-	// Store the CID information
-	if ( member->chan->cid.cid_num )
-	{
-		if ( (member->callerid = malloc(strlen(member->chan->cid.cid_num)+1)) )
-			memcpy(member->callerid,member->chan->cid.cid_num, strlen(member->chan->cid.cid_num)+1);
-	} else
-		member->callerid = NULL;
-
-	if ( member->chan->cid.cid_name )
-	{
-		if ( (member->callername = malloc(strlen(member->chan->cid.cid_name)+1)) )
-			memcpy(member->callername, member->chan->cid.cid_name, strlen(member->chan->cid.cid_name)+1);
-	} else
-		member->callername = NULL;
-
-
 	//
 	// process loop for new member ( this runs in it's own thread )
 	//
@@ -1747,10 +1731,6 @@ struct ast_conf_member* delete_member( struct ast_conf_member* member )
 
 	// free the member's copy of the spyee channel name
 	free(member->spyee_channel_name);
-
-	// free the member's memory
-	free(member->callerid);
-	free(member->callername);
 
 	// clear all sounds
 	struct ast_conf_soundq *sound = member->soundq;
